--- a/THANKS
+++ b/THANKS
@@ -27,6 +27,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Takashi Ichikawa                     ichikawa@astr.tohoku.ac.jp
     Raúl Infante Sainz                   infantesainz@gmail.com
     Brandon Invergo                      brandon@gnu.org
+    Aurélien Jarno                       aurelien.jarno@univ-lyon1.fr
     Lee Kelvin                           l.s.kelvin@ljmu.ac.uk
     Mohammad-Reza Khellat                moha.khe@gmail.com
     Alan Lefor                           alefor@astr.tohoku.ac.jp
