Removed extra freeing when changing values in ConvertType
To change values, ConvertType uses the arithmetic library. The flags that
are passed to the library include `GAL_ARITHMETIC_FREE'. So any temporary
arrays are freed by the library. However, we were mistakenly freeing one
temporary array (`cond') separately afterwards. This resulted in a
segmentation fault. So the freeing of `cond' is now removed.

This bug was found thanks to Takashi Ichikawa.

This fixes bug #52010.

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,22 @@
 GNU Astronomy Utilities NEWS                          -*- outline -*-
 
+
+* Noteworthy changes in release 0.4.XXX (library 2.0.0) (YYYY-MM-DD) [stable]
+
+** New features
+
+** Removed features
+
+** Changed features
+
+** Bug fixes
+
+  ConvertType crash when changing values (bug #52010).
+
+
+
+
+
 * Noteworthy changes in release 0.4 (library 2.0.0) (2017-09-13) [stable]
 
 ** New features
