Integer blank values in arithmetic and the FITS BLANK keyword
This commit solves some issues related to integer blank values in the
Arithmetic library and the BLANK keyword that must be written to the FITS
headers. They were both found while trying to do a simple arithmetic
operation on an unsigned 16-bit image and noticing that blank values are
not being considered properly in both stages.

For reading and writing a FITS image, we now have the
`gal_fits_key_img_blank' function which will allocate and fill the memory
for Gnuastro's blank values of any type as required by the FITS standard
(because the BLANK value must be the value before BZERO and BSCALE are
applied).

In the process, I also noticed the integer limits reported in the manual
for 8-bit and 16-bit signed integers needed corrections which are now
applied.

Also, in preparation for version 0.5, the library version has been
incremented to 3.0.0.

This fixes bug #52014.

--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,12 @@
 GNU Astronomy Utilities NEWS                          -*- outline -*-
 
 
-* Noteworthy changes in release 0.4.XXX (library 2.0.0) (YYYY-MM-DD) [stable]
+* Noteworthy changes in release 0.4.XXX (library 3.0.0) (YYYY-MM-DD) [stable]
 
 ** New features
+
+  `gal_fits_key_img_blank': returns the value that must be used in the
+  BLANK keyword for the given type as defined by the FITS standard.
 
 ** Removed features
 
@@ -12,6 +15,9 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 ** Bug fixes
 
   ConvertType crash when changing values (bug #52010).
+
+  Arithmetic not accounting for integer blank pixels in binary operators
+  (bug #52014).
 
 
 
